bug correct, overflow X

--- a/css/home/menu.css
+++ b/css/home/menu.css
@@ -1,7 +1,7 @@
 #menu {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width: 100vw;
+  /* width: 100vw; */
   height: 577px;
   position: relative;
 }
